working on rooted outline